--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": "node backend/server.js",
-    "server": "node server.js",
+    "start": "node server.js",
+    "server": "nodemon backend/server.js",
     "client": "npm start ---prefix frontend",
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
